--- a/example/index.html
+++ b/example/index.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bun Template</title>
+    <title>Dok Auth Example</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-image: url("wallpaper.webp");
+        background-size: cover;
+      }
+    </style>
   </head>
   <body></body>
   <script type="module">
