--- a/example/index.html
+++ b/example/index.html
@@ -6,11 +6,13 @@
     <title>Dok Auth Example</title>
     <style>
       body {
-        font-family: Arial, sans-serif;
         margin: 0;
         padding: 0;
         background-image: url("wallpaper.webp");
         background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        min-height: 100vh;
       }
     </style>
   </head>
